src/global.module.scss
/* global colors */


/* colors light */
$color_primary_background_light: #fff;
$color_secondary_background_light: #e8e8e8;
$color_primary_typography_light: #000;
$color_secondary_typography_light: #e8e8e8;
$color_tertiary_typography_light: #7f7f7f;
$color_link_typography_light: #000;
$color_box_shadow_light: #b2b2b2;

/* colors dark */
$color_primary_background_dark: #46454B;
$color_secondary_background_dark: #323138;
$color_primary_typography_dark: #fff;
$color_secondary_typography_dark: #fff;
$color_link_typography_dark: #fff;
$color_box_shadow_dark: #232227;

/* global typography */
$title_font_size_mobile: 1.6rem;
$title_font_size_tablet: 1.3rem;
$title_font_size_desktop: 1.0rem;

$subtitle_font_size_mobile: 1.3rem;
$detail_body: 0.9rem;
$detail_important: 1.0rem;

$control_typography_size: 1.0rem;

.control_text {
  font-size: 0.9rem;
}

/* global spacing */
$horizontal_spacing_mobile: 30px;
$horizontal_spacing_desktop: 60px;

$header_height: 150px;
$filter_top: 240px;

$header_height_desktop: 70px;
$filter_top_desktop: 100px;

/* global link */


* {
  box-sizing: border-box;
}

.light_background_primary {
  background-color: $color_primary_background_light;
}

.light_background_secondary {
  background-color: $color_secondary_background_light;
}

.light_typography_primary {
  color: $color_primary_typography_light;
}

.light_link_typography {
  color: $color_link_typography_light;
}

.light_button_typography {
  color: $color_tertiary_typography_light;
}

.light_icon {
  color: #666;
}

.light_typography_placeholder::placeholder {
  color: #666;
}



.dark_background_primary {
  background-color: $color_primary_background_dark;
}

.dark_background_secondary {
  background-color: $color_secondary_background_dark;
}

.dark_typography_primary {
  color: $color_primary_typography_dark;
}

.dark_link_typography {
  color: $color_link_typography_dark;
}

.dark_icon {
  color: $color_primary_typography_dark;
}

.dark_typography_placeholder::placeholder {
  color: $color_primary_typography_dark;
}



.link {
  text-decoration: none;
}

.row_global {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  align-items: flex-start;
}

@media (min-width: 768px) {

  .row {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
  }

  .row_top {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: flex-start;
  }
  
}

